--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 [site]
 address = ":8081" # TODO: unix socket
-https = false # used for OAuth redirection; optional if autoredirect
+# fronturl is used for OAuth redirection and Discord messages.
+fronturl = "http://127.0.0.1:8081"
 
 site_name = "CSUFBot"
 disclaimer = '''
